--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
+body{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background: rgba(241,111,92,1);
+  background: -moz-linear-gradient(left, rgba(241,111,92,1) 0%, rgba(246,41,12,1) 0%, rgba(240,47,23,1) 0%, rgba(224,188,182,1) 0%, rgba(217,140,133,1) 100%);
+  background: -webkit-gradient(left top, right top, color-stop(0%, rgba(241,111,92,1)), color-stop(0%, rgba(246,41,12,1)), color-stop(0%, rgba(240,47,23,1)), color-stop(0%, rgba(224,188,182,1)), color-stop(100%, rgba(217,140,133,1)));
+  background: -webkit-linear-gradient(left, rgba(241,111,92,1) 0%, rgba(246,41,12,1) 0%, rgba(240,47,23,1) 0%, rgba(224,188,182,1) 0%, rgba(217,140,133,1) 100%);
+  background: -o-linear-gradient(left, rgba(241,111,92,1) 0%, rgba(246,41,12,1) 0%, rgba(240,47,23,1) 0%, rgba(224,188,182,1) 0%, rgba(217,140,133,1) 100%);
+  background: -ms-linear-gradient(left, rgba(241,111,92,1) 0%, rgba(246,41,12,1) 0%, rgba(240,47,23,1) 0%, rgba(224,188,182,1) 0%, rgba(217,140,133,1) 100%);
+  background: linear-gradient(to right, rgba(241,111,92,1) 0%, rgba(246,41,12,1) 0%, rgba(240,47,23,1) 0%, rgba(224,188,182,1) 0%, rgba(217,140,133,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f16f5c', endColorstr='#d98c85', GradientType=1 );
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
 }
 
-.App-link {
-  color: #61dafb;
+#root, .App{
+  height: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Quiz{
+  width: 100%;
+  margin-top: 40px;
+}
+
+.question{
+  border-radius: 5px;
+  padding: 20px;
+  background: #e87e7e;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.tablePoints{
+  padding-top: 20px;
+}
+
+.tablePoints .item{
+  display: flex;
+  margin-bottom: 10px;
+  background: #fff;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.tablePoints .item span:last-child{
+  margin-left: auto;
 }
